# OpenGLRendering

./: .gitignore  CMakeLists.txt  README.md  build.sh  compile.sh  dbuild.sh
src/: CMakeLists.txt  main.c  sources.cmake
src/headers/: pch.h  window.h
